tests/error/new_empty_array.gw
#! [contains] instantiate with empty
new Object[];
